--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3005
 DB_CNN = mongodb+srv://cmolina:2021Cmp2@cluster0.0omum.mongodb.net/hospitaldb
+JWT_SECRET = holashjahsajkhashksha@ieoweuw2132920
