--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
         "cors": "^2.8.5",
         "dotenv": "^11.0.0",
         "express": "^4.17.2",
+        "express-fileupload": "^1.2.1",
         "express-validator": "^6.14.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.1.6"
+        "mongoose": "^6.1.6",
+        "uuid": "^8.3.2"
     }
 }
