--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 3005
 DB_CNN = mongodb+srv://cmolina:2021Cmp2@cluster0.0omum.mongodb.net/hospitaldb
 JWT_SECRET = holashjahsajkhashksha@ieoweuw2132920
+GOOGLE_ID = 434910464377-jm9ni910vk4malcr6spp05i69l3q1cpg.apps.googleusercontent.com
+GOOGLE_SECRET = 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
